--- a/polo-fashions/index.html
+++ b/polo-fashions/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/jpeg" href="/polo-fashions/public/icon.jpeg" />
+    <link rel="icon" type="image/jpeg" href="icon.jpeg" />
 
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>polo-fashions</title>
