Add PWA icons and update manifest

--- a/polo-fashions/index.html
+++ b/polo-fashions/index.html
@@ -3,10 +3,32 @@
 
 <head>
   <meta charset="UTF-8" />
-  <link rel="shortcut icon" href="/icon.jpg" type="image/x-icon">
-
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>polo-fashions</title>
+
+  <!-- ✅ FAVICON - Convert your icon.jpg to .ico or .png -->
+  <link rel="icon" type="image/png" href="/icon.png" />
+  <!-- OR if you convert to .ico format -->
+  <!-- <link rel="icon" type="image/x-icon" href="/favicon.ico" /> -->
+
+  <!-- ✅ Apple Touch Icon for iOS (180x180) -->
+  <link rel="apple-touch-icon" href="/apple-touch-icon.png" />
+
+  <!-- ✅ PWA Manifest -->
+  <link rel="manifest" href="/manifest.json" />
+
+  <!-- ✅ Theme Color (matches your navy blue brand) -->
+  <meta name="theme-color" content="#003366" />
+
+  <!-- ✅ iOS Status Bar -->
+  <meta name="apple-mobile-web-app-capable" content="yes" />
+  <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent" />
+  <meta name="apple-mobile-web-app-title" content="Polo Fashions" />
+
+  <!-- ✅ Description -->
+  <meta name="description"
+    content="Your trusted partner for custom tailoring and premium ready-made traditional wear." />
+
+  <title>Polo Fashions</title>
 </head>
 
 <body>
