--- a/polo-fashions/index.html
+++ b/polo-fashions/index.html
@@ -6,7 +6,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
   <!-- ✅ FAVICON - Convert your icon.jpg to .ico or .png -->
-  <link rel="icon" type="image/png" href="/icon.png" />
+  <link rel="icon" type="image/jpg" href="/icon.jpg" />
   <!-- OR if you convert to .ico format -->
   <!-- <link rel="icon" type="image/x-icon" href="/favicon.ico" /> -->
 
